tests/fixtures/invalid/set_gt_bytes.py
# Cannot compare with > Set[int] and Bytes
x: bool = {1, 2, 3} > b"hello"
